[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Main Menu.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LevelSelection.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Main Menu/LevelSelectButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/NinePatch 2.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/NinePatch 2.png-9001a897021d635897afce894cdd701b.stex"

[node name="LevelSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="MainMenu" type="Sprite" parent="Panel"]
position = Vector2( 640, 360 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -219.0
margin_right = 296.0
margin_bottom = -143.0
custom_colors/font_color = Color( 0.607843, 0.392157, 0.231373, 1 )
custom_fonts/font = SubResource( 1 )
text = "Select Difficulty:"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -559.0
margin_top = -139.0
margin_right = 1793.0
margin_bottom = -99.0
rect_scale = Vector2( 0.4, 0.4 )
custom_constants/separation = 588

[node name="LevelSelectButton" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_right = 0.0
margin_bottom = 40.0

[node name="Label" parent="HBoxContainer/LevelSelectButton/NinePatchRect" index="0"]
text = "Easy"
align = 1

[node name="LevelSelectButton3" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 588.0
margin_right = 588.0
margin_bottom = 40.0

[node name="Label" parent="HBoxContainer/LevelSelectButton3/NinePatchRect" index="0"]
align = 1

[node name="LevelSelectButton4" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1176.0
margin_right = 1176.0
margin_bottom = 40.0

[node name="Label" parent="HBoxContainer/LevelSelectButton4/NinePatchRect" index="0"]
text = "Medium"
align = 1

[node name="LevelSelectButton5" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 1764.0
margin_right = 1764.0
margin_bottom = 40.0

[node name="Label" parent="HBoxContainer/LevelSelectButton5/NinePatchRect" index="0"]
text = "Hard"
align = 1

[node name="LevelSelectButton2" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 2352.0
margin_right = 2352.0
margin_bottom = 40.0

[node name="Label" parent="HBoxContainer/LevelSelectButton2/NinePatchRect" index="0"]
text = "??!?!!"
align = 1

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 480.0
margin_top = 615.0
margin_right = 1277.0
margin_bottom = 795.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -80.0
margin_right = 290.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Start Game"

[node name="StartGameButton" type="Button" parent="NinePatchRect"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 797.0
margin_bottom = 180.0

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
margin_left = 55.0
margin_top = 630.0
margin_right = 525.0
margin_bottom = 810.0
rect_scale = Vector2( 0.2, 0.2 )
texture = SubResource( 3 )
patch_margin_left = 60
patch_margin_top = 60
patch_margin_right = 60
patch_margin_bottom = 120

[node name="Label" type="Label" parent="NinePatchRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -80.0
margin_right = 130.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Back"

[node name="BackButton" type="Button" parent="NinePatchRect2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 470.0
margin_bottom = 180.0

[connection signal="pressed" from="NinePatchRect/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="NinePatchRect2/BackButton" to="." method="_on_BackButton_pressed"]

[editable path="HBoxContainer/LevelSelectButton"]
[editable path="HBoxContainer/LevelSelectButton3"]
[editable path="HBoxContainer/LevelSelectButton4"]
[editable path="HBoxContainer/LevelSelectButton5"]
[editable path="HBoxContainer/LevelSelectButton2"]
